plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0' // Spring Boot 버전 3.3.x로 변경
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.4" // Spring Cloud 호환 버전
    }
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'

    // Database & MyBatis
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

    // Flyway
    implementation 'org.flywaydb:flyway-mysql'

    // OpenFeign for REST clients
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    // Lombok for boilerplate code reduction
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'software.amazon.awssdk:s3:2.20.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
